syntax = "proto3";


package gRPC;

option go_package = "github.com/Pillsbury42/HastJebalOskw/handin5/gRPC";

message BidMessage {
    string bidderName = 1;
    int64 amount = 2;
}

message BidReplyMessage {
    string success = 1;
    int64 leaderID = 2;
}

message ResultReplyMessage {
    string winnerName = 2; //id of the winner
    int64 highest = 3; //the highest bid
    int64 leaderID = 4;
    string success = 1;
}

message ElectionReplyMessage {
    int64 replyID = 1;
}

message CoordinatorMessage {
    int64 coordID = 1;
}

message StartMessage {
    int64 startTime = 1;
}

message EmptyMessage {
    
}

service Auction {
  rpc bid(BidMessage) returns (BidReplyMessage);
  rpc bidupdate(BidMessage) returns (EmptyMessage);
  rpc result(EmptyMessage) returns (ResultReplyMessage);
  rpc election(EmptyMessage) returns (ElectionReplyMessage);
  rpc coordinator(CoordinatorMessage) returns (EmptyMessage); 
  rpc start(StartMessage) returns (EmptyMessage);
}